--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     </string>
     <string name="event_label">Add event name</string>
     <string name="save">Save</string>
+    <string name="select_date">Select date</string>
 </resources>
